fix: Add unified player entry page
- player.html: unified entry point for all games
- Auto-detects game mode from room code
- Redirects to correct game interface
- conquest-player.html: auto-join from URL params
- server.js: checkRoomMode endpoint

--- a/public/conquest-player.html
+++ b/public/conquest-player.html
@@ -228,6 +228,18 @@
         let pendingActions = [];
         let timerInterval = null;
 
+        // Auto-join from URL params
+        const urlParams = new URLSearchParams(window.location.search);
+        const urlRoomCode = urlParams.get('roomCode');
+        const urlNickname = urlParams.get('nickname');
+
+        if (urlRoomCode && urlNickname) {
+            // Auto-join
+            document.getElementById('roomCodeInput').value = urlRoomCode;
+            document.getElementById('nicknameInput').value = urlNickname;
+            setTimeout(() => joinGame(), 500);
+        }
+
         // Join game
         function joinGame() {
             roomCode = document.getElementById('roomCodeInput').value.trim().toUpperCase();
