--- a/public/player-reflex.html
+++ b/public/player-reflex.html
@@ -75,10 +75,17 @@
             transform: translateY(-2px);
         }
 
-        .error {
-            color: red;
-            margin-top: 15px;
-            font-size: 14px;
+        #gameFrame {
+            display: none;
+            width: 100%;
+            height: 100vh;
+            border: none;
+        }
+
+        .loading {
+            color: white;
+            font-size: 24px;
+            text-align: center;
         }
     </style>
 </head>
@@ -92,8 +99,10 @@
         <input type="text" id="nickname" placeholder="Tên của bạn">
         <button onclick="joinRoom()">Tham Gia</button>
 
-        <p id="error" class="error"></p>
+        <p id="error" style="color: red; margin-top: 15px;"></p>
     </div>
+
+    <iframe id="gameFrame"></iframe>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
