fix: Enable scrolling on conquest host page

--- a/public/conquest-host.html
+++ b/public/conquest-host.html
@@ -12,6 +12,8 @@
             padding: 20px;
             display: flex;
             gap: 20px;
+            min-height: 100vh;
+            overflow-y: auto;
         }
 
         .main-display {
