--- a/public/host-reflex.html
+++ b/public/host-reflex.html
@@ -5,211 +5,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reflex Royale - Host</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-    }
-
-    .container {
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-      max-width: 600px;
-      width: 100%;
-      padding: 50px;
-      text-align: center;
-      animation: fadeIn 0.5s ease;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    h1 {
-      color: #667eea;
-      font-size: 42px;
-      margin-bottom: 15px;
-    }
-
-    .subtitle {
-      color: #666;
-      margin-bottom: 50px;
-      font-size: 18px;
-    }
-
-    .game-selection {
-      display: grid;
-      gap: 20px;
-      margin-bottom: 30px;
-    }
-
-    .game-card {
-      background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
-      border-radius: 16px;
-      padding: 30px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      border: 3px solid transparent;
-    }
-
-    .game-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-    }
-
-    .game-card.selected {
-      border-color: #667eea;
-      background: linear-gradient(135deg, #e8eaf6 0%, #c5cae9 100%);
-    }
-
-    .game-icon {
-      font-size: 64px;
-      margin-bottom: 15px;
-    }
-
-    .game-name {
-      font-size: 28px;
-      font-weight: bold;
-      color: #667eea;
-      margin-bottom: 10px;
-    }
-
-    .game-description {
-      color: #666;
-      font-size: 14px;
-      line-height: 1.6;
-    }
-
-    .game-stats {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 15px;
-      font-size: 12px;
-      color: #999;
-    }
-
-    .btn {
-      display: block;
-      width: 100%;
-      padding: 20px;
-      font-size: 20px;
-      font-weight: bold;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      text-decoration: none;
-      color: white;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      margin-top: 20px;
-    }
-
-    .btn:hover:not(:disabled) {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 25px rgba(102, 126, 234, 0.4);
-    }
-
-    .btn:disabled {
-      opacity: 0.5;
-      cursor: not-allowed;
-    }
-  </style>
+  <link rel="stylesheet" href="/css/shared.css">
+  <link rel="stylesheet" href="/css/host.css">
 </head>
 
 <body>
-  <div class="container">
-    <h1>🎮 Chọn Trò Chơi</h1>
-    <p class="subtitle">Host - Chọn game mode cho sự kiện</p>
+  <!-- Waiting Room Screen -->
+  <div id="waitingScreen" class="screen">
+    <div class="container">
+      <h1 class="game-title text-gradient fade-in">⚡ REFLEX ROYALE ⚡</h1>
 
-    <div class="game-selection">
-      <div class="game-card" onclick="selectGame('reflex')">
-        <div class="game-icon">⚡</div>
-        <div class="game-name">Reflex Royale</div>
-        <div class="game-description">
-          Trò chơi kiểm tra phản xạ với nhiều minigames: chạm đúng màu,
-          vuốt đúng hướng, lắc điên cuồng, chạm liên hoàn
-        </div>
-        <div class="game-stats">
-          <span>⏱️ 3-5 phút</span>
-          <span>👥 Không giới hạn</span>
-          <span>📱 Mobile</span>
-        </div>
+      <div class="room-code-container glass fade-in">
+        <p class="room-code-label">Mã Phòng</p>
+        <h2 class="room-code" id="roomCode">------</h2>
+        <p class="room-code-instruction">Vào <strong>reflex-royale</strong> và nhập mã trên</p>
       </div>
 
-      <div class="game-card" onclick="selectGame('conquest')">
-        <div class="game-icon">🏛️</div>
-        <div class="game-name">Đại Chiến Giảng Đường</div>
-        <div class="game-description">
-          Chiếm lĩnh lãnh thổ chiến thuật. Dự đoán đối thủ,
-          tránh xung đột, mở rộng bản đồ của bạn!
+      <div class="players-waiting glass fade-in">
+        <h3>🎮 Người Chơi Đang Chờ (<span id="playerCount">0</span>)</h3>
+        <div id="playerList" class="player-grid"></div>
+      </div>
+
+      <button id="startGameBtn" class="btn btn-primary btn-lg fade-in" disabled>
+        BẮT ĐẦU TRÒ CHƠI
+      </button>
+    </div>
+  </div>
+
+  <!-- Game Screen -->
+  <div id="gameScreen" class="screen hidden">
+    <div class="game-header">
+      <div class="round-info">
+        Vòng <span id="currentRound">1</span>/<span id="totalRounds">7</span>
+      </div>
+      <div class="game-title-small text-gradient">REFLEX ROYALE</div>
+      <div class="host-controls">
+        <div class="timer-display" id="timerDisplay">
+          <span class="timer-icon">⏱️</span>
+          <span class="timer-value" id="timerValue">--</span>s
         </div>
-        <div class="game-stats">
-          <span>⏱️ 3-4 phút</span>
-          <span>👥 50-500 người</span>
-          <span>🧠 Chiến thuật</span>
-        </div>
+        <button id="nextRoundBtn" class="btn btn-secondary">Vòng Tiếp Theo →</button>
       </div>
     </div>
 
-    <button class="btn" id="startBtn" disabled onclick="startGame()">
-      Chọn game để bắt đầu
-    </button>
+    <!-- Round Display Area -->
+    <div id="roundDisplay" class="round-display">
+      <!-- Content will be dynamically inserted -->
+    </div>
+
+    <!-- Leaderboard -->
+    <div class="leaderboard-container">
+      <h3 class="leaderboard-title">🏆 BXH LIVE</h3>
+      <div id="leaderboard" class="leaderboard"></div>
+    </div>
   </div>
 
-  <script>
-    let selectedGameMode = null;
+  <!-- Game Over Screen -->
+  <div id="gameOverScreen" class="screen hidden">
+    <div class="container">
+      <h1 class="game-title text-gradient fade-in">🎉 HOÀN THÀNH! 🎉</h1>
 
-    function selectGame(mode) {
-      selectedGameMode = mode;
+      <div class="final-leaderboard glass">
+        <h2>🏆 BẢNG XẾP HẠNG CHUNG CUỘC</h2>
+        <div id="finalLeaderboard"></div>
+      </div>
 
-      // Update UI
-      document.querySelectorAll('.game-card').forEach(card => {
-        card.classList.remove('selected');
-      });
-      event.currentTarget.classList.add('selected');
+      <button id="newGameBtn" class="btn btn-primary btn-lg">
+        TẠO TRÒ CHƠI MỚI
+      </button>
+    </div>
+  </div>
 
-      // Enable button
-      const btn = document.getElementById('startBtn');
-      btn.disabled = false;
-
-      if (mode === 'reflex') {
-        btn.textContent = '⚡ Tạo Phòng Reflex Royale';
-      } else {
-        btn.textContent = '🏛️ Tạo Phòng Đại Chiến Giảng Đường';
-      }
-    }
-
-    function startGame() {
-      if (!selectedGameMode) return;
-
-      if (selectedGameMode === 'reflex') {
-        window.location.href = '/host-reflex.html';
-      } else {
-        window.location.href = '/conquest-host.html';
-      }
-    }
-  </script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/host.js"></script>
 </body>
 
 </html>
