feat: Change room code to 4 digits and fix player validation
- Room codes now 4 digits (1000-9999) instead of 6 alphanumeric
- Auto-generate nickname if missing (PlayerXXX)
- Updated validation and input fields
- Easier for users to remember and type

--- a/public/player-reflex.html
+++ b/public/player-reflex.html
@@ -18,7 +18,7 @@
             <h1 class="game-title text-gradient">⚡ REFLEX ROYALE ⚡</h1>
 
             <div class="join-form glass">
-                <input type="text" id="roomCodeInput" placeholder="Nhập mã phòng" maxlength="6" autocomplete="off">
+                <input type="text" id="roomCodeInput" placeholder="Nhập mã 4 số" maxlength="4" autocomplete="off">
                 <input type="text" id="nicknameInput" placeholder="Tên của bạn" maxlength="20">
                 <button id="joinBtn" class="btn btn-primary">THAM GIA</button>
                 <div id="errorMessage" class="error-message hidden"></div>
