--- a/public/player.html
+++ b/public/player.html
@@ -88,7 +88,7 @@
         <h1>🎮 Tham Gia Phòng</h1>
         <p class="subtitle">Nhập mã phòng để chơi</p>
 
-        <input type="text" id="roomCode" placeholder="Nhập mã phòng" maxlength="6">
+        <input type="text" id="roomCode" placeholder="Mã 4 số" maxlength="4">
         <input type="text" id="nickname" placeholder="Tên của bạn">
         <button onclick="joinRoom()">Tham Gia</button>
 
