debug: Add logging for conquest action submission
- Log client-side action submission
- Log server-side action reception
- Log conflict resolution results
- Help diagnose why cells not being claimed

--- a/public/conquest-player.html
+++ b/public/conquest-player.html
@@ -358,11 +358,15 @@
 
         // Submit actions
         function submitActions() {
+            console.log('[Conquest Client] Submitting actions:', pendingActions);
             if (pendingActions.length > 0) {
                 socket.emit('conquestSubmitActions', {
                     roomCode,
                     actions: pendingActions
                 });
+                console.log('[Conquest Client] Actions sent to server');
+            } else {
+                console.log('[Conquest Client] No actions to submit');
             }
         }
 
