fix: Reset hasSubmitted flag at round start

--- a/public/conquest-player.html
+++ b/public/conquest-player.html
@@ -271,6 +271,7 @@
             currentAP = ap;
             maxAP = ap;
             pendingActions = [];
+            hasSubmitted = false; // Reset for new round
 
             // Initialize or update grid
             if (!grid) {
