--- a/public/conquest-host.html
+++ b/public/conquest-host.html
@@ -249,159 +249,157 @@
             grid.import(mapState);
             renderer.render();
 
-            startTimer(duration / 1000);
+            // Real-time player cell selections
+            // const playerPendingCells = new Map(); // playerId -> [{x, y}]
 
-            document.getElementById('nextBtn').style.display = 'none';
-        });
+            // socket.on('conquestPlayerCellUpdate', ({ playerId, playerNickname, x, y, action }) => {
+            //     if (!playerPendingCells.has(playerId)) {
+            //         playerPendingCells.set(playerId, []);
+            //     }
 
-        // Real-time player cell selections
-        const playerPendingCells = new Map(); // playerId -> [{x, y}]
+            //     const cells = playerPendingCells.get(playerId);
 
-        socket.on('conquestPlayerCellUpdate', ({ playerId, playerNickname, x, y, action }) => {
-            if (!playerPendingCells.has(playerId)) {
-                playerPendingCells.set(playerId, []);
-            }
+            //     if (action === 'add') {
+            //         cells.push({ x, y });
+            //     } else if (action === 'remove') {
+            //         const index = cells.findIndex(c => c.x === x && c.y === y);
+            //         if (index >= 0) cells.splice(index, 1);
+            //     }
 
-            const cells = playerPendingCells.get(playerId);
+            //     // Update cell display
+            //     updatePendingCellDisplay();
+            // });
 
-            if (action === 'add') {
-                cells.push({ x, y });
-            } else if (action === 'remove') {
-                const index = cells.findIndex(c => c.x === x && c.y === y);
-                if (index >= 0) cells.splice(index, 1);
-            }
+            // function updatePendingCellDisplay() {
+            //     // Clear all pending indicators first
+            //     document.querySelectorAll('.pending-indicator').forEach(el => el.remove());
 
-            // Update cell display
-            updatePendingCellDisplay();
-        });
+            //     // Add indicators for each player's pending cells
+            //     playerPendingCells.forEach((cells, playerId) => {
+            //         cells.forEach(({ x, y }) => {
+            //             const cell = document.querySelector(`[data-x="${x}"][data-y="${y}"]`);
+            //             if (cell && !cell.classList.contains('owned')) {
+            //                 // Add small indicator
+            //                 const indicator = document.createElement('div');
+            //                 indicator.className = 'pending-indicator';
+            //                 indicator.textContent = '👤';
+            //                 indicator.style.cssText = `
+            //                     position: absolute; 
+            //                     top: 2px; 
+            //                     left: 2px; 
+            //                     font-size: 12px;
+            //                     pointer-events: none;
+            //                 `;
+            //                 cell.style.position = 'relative';
+            //                 cell.appendChild(indicator);
+            //             }
+            //         });
+            //     });
+            // }
 
-        function updatePendingCellDisplay() {
-            // Clear all pending indicators first
-            document.querySelectorAll('.pending-indicator').forEach(el => el.remove());
+            // Real-time indicators removed - don't spoil player strategy!
+            // socket.on('conquestPlayerCellUpdate', ...) - DISABLED
 
-            // Add indicators for each player's pending cells
-            playerPendingCells.forEach((cells, playerId) => {
-                cells.forEach(({ x, y }) => {
-                    const cell = document.querySelector(`[data-x="${x}"][data-y="${y}"]`);
-                    if (cell && !cell.classList.contains('owned')) {
-                        // Add small indicator
-                        const indicator = document.createElement('div');
-                        indicator.className = 'pending-indicator';
-                        indicator.textContent = '👤';
-                        indicator.style.cssText = `
-                            position: absolute; 
-                            top: 2px; 
-                            left: 2px; 
-                            font-size: 12px;
-                            pointer-events: none;
-                        `;
-                        cell.style.position = 'relative';
-                        cell.appendChild(indicator);
+            socket.on('conquestMapUpdate', (data) => {
+                const { grid: gridData, leaderboard, conflictsThisRound } = data;
+
+                // Update grid data
+                grid.grid = gridData;
+
+                // Update only changed cells instead of full re-render
+                for (let x = 0; x < grid.size; x++) {
+                    for (let y = 0; y < grid.size; y++) {
+                        renderer.updateCell(x, y);
                     }
+                }
+
+                // Show conflicts
+                conflictsThisRound.forEach(({ x, y }) => {
+                    renderer.showConflict(x, y);
                 });
-            });
-        }
 
-        socket.on('conquestMapUpdate', (data) => {
-            const { grid: gridData, leaderboard, conflictsThisRound } = data;
+                // Update leaderboard
+                updateLeaderboard(leaderboard);
 
-            // Update grid data
-            grid.grid = gridData;
-
-            // Update only changed cells instead of full re-render
-            for (let x = 0; x < grid.size; x++) {
-                for (let y = 0; y < grid.size; y++) {
-                    renderer.updateCell(x, y);
+                // Count total claimed cells
+                let total = 0;
+                for (let x = 0; x < grid.size; x++) {
+                    for (let y = 0; y < grid.size; y++) {
+                        if (grid.grid[x][y] !== null) total++;
+                    }
                 }
-            }
+                document.getElementById('totalCells').textContent = total;
 
-            // Show conflicts
-            conflictsThisRound.forEach(({ x, y }) => {
-                renderer.showConflict(x, y);
+                // Clear pending indicators after round ends
+                playerPendingCells.clear();
+                document.querySelectorAll('.pending-indicator').forEach(el => el.remove());
             });
 
-            // Update leaderboard
-            updateLeaderboard(leaderboard);
-
-            // Count total claimed cells
-            let total = 0;
-            for (let x = 0; x < grid.size; x++) {
-                for (let y = 0; y < grid.size; y++) {
-                    if (grid.grid[x][y] !== null) total++;
-                }
-            }
-            document.getElementById('totalCells').textContent = total;
-
-            // Clear pending indicators after round ends
-            playerPendingCells.clear();
-            document.querySelectorAll('.pending-indicator').forEach(el => el.remove());
-        });
-
-        socket.on('conquestRoundEnd', () => {
-            if (timerInterval) {
-                clearInterval(timerInterval);
-            }
-            document.getElementById('nextBtn').style.display = 'inline-block';
-        });
-
-        socket.on('conquestGameOver', (data) => {
-            document.getElementById('gameStatus').textContent = '🎉 Trò Chơi Kết Thúc!';
-            document.getElementById('nextBtn').style.display = 'none';
-            updateLeaderboard(data.finalLeaderboard);
-        });
-
-        function nextRound() {
-            socket.emit('conquestNextRound', { roomCode });
-        }
-
-        function startTimer(seconds) {
-            let remaining = seconds;
-            const timerEl = document.getElementById('timer');
-
-            if (timerInterval) clearInterval(timerInterval);
-
-            timerInterval = setInterval(() => {
-                remaining--;
-                timerEl.textContent = remaining;
-
-                if (remaining <= 3) {
-                    timerEl.classList.add('warning');
-                } else {
-                    timerEl.classList.remove('warning');
-                }
-
-                if (remaining <= 0) {
+            socket.on('conquestRoundEnd', () => {
+                if (timerInterval) {
                     clearInterval(timerInterval);
                 }
-            }, 1000);
-        }
-
-        function updateLeaderboard(leaderboard) {
-            const container = document.getElementById('leaderboardList');
-            container.innerHTML = '';
-
-            leaderboard.slice(0, 10).forEach((player, index) => {
-                const item = document.createElement('div');
-                item.className = `leaderboard-item rank-${index + 1}`;
-
-                const rankBadge = document.createElement('div');
-                rankBadge.className = 'rank-badge';
-                rankBadge.textContent = index === 0 ? '🥇' : index === 1 ? '🥈' : index === 2 ? '🥉' : `#${index + 1}`;
-
-                const name = document.createElement('div');
-                name.className = 'player-name';
-                name.textContent = player.nickname;
-
-                const score = document.createElement('div');
-                score.className = 'player-score';
-                score.textContent = player.territory || 0;
-
-                item.appendChild(rankBadge);
-                item.appendChild(name);
-                item.appendChild(score);
-                container.appendChild(item);
+                document.getElementById('nextBtn').style.display = 'inline-block';
             });
-        }
+
+            socket.on('conquestGameOver', (data) => {
+                document.getElementById('gameStatus').textContent = '🎉 Trò Chơi Kết Thúc!';
+                document.getElementById('nextBtn').style.display = 'none';
+                updateLeaderboard(data.finalLeaderboard);
+            });
+
+            function nextRound() {
+                socket.emit('conquestNextRound', { roomCode });
+            }
+
+            function startTimer(seconds) {
+                let remaining = seconds;
+                const timerEl = document.getElementById('timer');
+
+                if (timerInterval) clearInterval(timerInterval);
+
+                timerInterval = setInterval(() => {
+                    remaining--;
+                    timerEl.textContent = remaining;
+
+                    if (remaining <= 3) {
+                        timerEl.classList.add('warning');
+                    } else {
+                        timerEl.classList.remove('warning');
+                    }
+
+                    if (remaining <= 0) {
+                        clearInterval(timerInterval);
+                    }
+                }, 1000);
+            }
+
+            function updateLeaderboard(leaderboard) {
+                const container = document.getElementById('leaderboardList');
+                container.innerHTML = '';
+
+                leaderboard.slice(0, 10).forEach((player, index) => {
+                    const item = document.createElement('div');
+                    item.className = `leaderboard-item rank-${index + 1}`;
+
+                    const rankBadge = document.createElement('div');
+                    rankBadge.className = 'rank-badge';
+                    rankBadge.textContent = index === 0 ? '🥇' : index === 1 ? '🥈' : index === 2 ? '🥉' : `#${index + 1}`;
+
+                    const name = document.createElement('div');
+                    name.className = 'player-name';
+                    name.textContent = player.nickname;
+
+                    const score = document.createElement('div');
+                    score.className = 'player-score';
+                    score.textContent = player.territory || 0;
+
+                    item.appendChild(rankBadge);
+                    item.appendChild(name);
+                    item.appendChild(score);
+                    container.appendChild(item);
+                });
+            }
     </script>
 </body>
 
