--- a/public/conquest-player.html
+++ b/public/conquest-player.html
@@ -406,22 +406,20 @@
         socket.on('conquestRoundEnd', (data) => {
             const { mapState, conflicts, yourTerritory, yourRank } = data;
 
-            // Update grid
+            // Update grid immediately (no delay!)
             grid.import(mapState);
 
-            // Show conflicts
+            // Show conflicts briefly
             conflicts.forEach(({ x, y }) => {
                 renderer.showConflict(x, y);
             });
 
-            // Update cells after conflict animation
-            setTimeout(() => {
-                for (let x = 0; x < grid.size; x++) {
-                    for (let y = 0; y < grid.size; y++) {
-                        renderer.updateCell(x, y);
-                    }
+            // Update all cells right away for fast response
+            for (let x = 0; x < grid.size; x++) {
+                for (let y = 0; y < grid.size; y++) {
+                    renderer.updateCell(x, y);
                 }
-            }, 700);
+            }
 
             // Update stats
             document.getElementById('territoryCount').textContent = yourTerritory || 0;
