--- a/public/conquest-host.html
+++ b/public/conquest-host.html
@@ -246,6 +246,13 @@
 
             document.getElementById('roundDisplay').textContent = `Round ${roundNumber}/${maxRounds}`;
 
+            // Reset next round button
+            const nextBtn = document.getElementById('nextBtn');
+            nextBtn.style.display = 'none';
+            nextBtn.disabled = false;
+            nextBtn.textContent = 'Vòng Tiếp Theo';
+            nextBtn.style.opacity = '1';
+
             grid.import(mapState);
             renderer.render();
 
@@ -350,6 +357,12 @@
 
         // Functions in global scope
         function nextRound() {
+            // Disable button immediately for visual feedback
+            const btn = document.getElementById('nextBtn');
+            btn.disabled = true;
+            btn.textContent = 'Đang xử lý...';
+            btn.style.opacity = '0.5';
+
             socket.emit('conquestNextRound', { roomCode });
         }
 
