--- a/public/conquest-player.html
+++ b/public/conquest-player.html
@@ -153,10 +153,35 @@
             font-size: 32px;
             margin-bottom: 30px;
         }
+
+        .back-btn {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: white;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            z-index: 9999;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.3s;
+        }
+
+        .back-btn:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
 
 <body>
+    <button class="back-btn" onclick="window.location.href='/player.html'" title="Quay lại">⬅️</button>
     <div class="player-container" id="gameContainer" style="display: none;">
         <div class="header">
             <div class="game-title">🏛️ ĐẠI CHIẾN GIẢNG ĐƯỜNG</div>
@@ -200,6 +225,11 @@
             <button onclick="joinGame()"
                 style="padding: 15px 40px; font-size: 18px; font-weight: bold; border-radius: 8px; border: none; background: white; color: var(--primary-purple); cursor: pointer;">
                 Tham Gia
+            </button>
+            <br>
+            <button onclick="window.location.href='/player.html'"
+                style="padding: 15px 40px; margin-top: 15px; font-size: 18px; font-weight: bold; border-radius: 8px; border: none; background: white; color: var(--primary-purple); cursor: pointer;">
+                ⬅️ Quay Lại
             </button>
         </div>
     </div>
