feat: Auto-redirect to menu after game ends
SIMPLE SOLUTION:
- Redirect to menu 3 seconds after game over
- Prevents room switching conflicts
- Cleaner than complex socket management

CHANGES:
✅ Conquest Host → /host.html
✅ Conquest Player → /player.html
✅ Reflex Host → /host.html
✅ Reflex Player → /player.html

BENEFITS:
- No room conflict issues
- Forces fresh start for new game
- Better UX (clear end state)

--- a/public/conquest-host.html
+++ b/public/conquest-host.html
@@ -376,6 +376,11 @@
                 document.getElementById('gameStatus').textContent = '🎉 Trò Chơi Kết Thúc!';
                 document.getElementById('nextBtn').style.display = 'none';
                 updateLeaderboard(data.finalLeaderboard);
+                
+                // Auto-redirect after 3 seconds
+                setTimeout(() => {
+                    window.location.href = '/host.html';
+                }, 3000);
             });
 
             // Start round timer
