fix: Player redirect to index (main menu) after game

--- a/public/conquest-player.html
+++ b/public/conquest-player.html
@@ -464,7 +464,7 @@
 
             // Auto-redirect after 3 seconds
             setTimeout(() => {
-                window.location.href = '/player.html';
+                window.location.href = '/';
             }, 3000);
         });
 
