fix: Hide back buttons during game (CSS only visible on join screens)

--- a/public/conquest-host.html
+++ b/public/conquest-host.html
@@ -154,9 +154,9 @@
         }
 
         /* Hide back button during game */
-        #mainDisplay:not([style*="display: none"])~.back-btn,
-        #gameContainer:not([style*="display: none"]) .back-btn {
-            display: none;
+        #mainDisplay:not([style*="display: none"]) .back-btn,
+        #sidebar:not([style*="display: none"])~.back-btn {
+            display: none !important;
         }
     </style>
 </head>
