--- a/public/conquest-player.html
+++ b/public/conquest-player.html
@@ -177,6 +177,11 @@
             transform: scale(1.1);
             box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
         }
+
+        /* Hide during game */
+        #gameContainer:not([style*="display: none"]) .back-btn {
+            display: none !important;
+        }
     </style>
 </head>
 
