--- a/public/player-reflex.html
+++ b/public/player-reflex.html
@@ -33,6 +33,12 @@
             transform: scale(1.1);
             box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
         }
+
+        /* Hide during game */
+        #gameScreen:not(.hidden)~.back-btn,
+        #waitingScreen.hidden~.back-btn {
+            display: none !important;
+        }
     </style>
 </head>
 
