--- a/public/host-reflex.html
+++ b/public/host-reflex.html
@@ -31,6 +31,12 @@
       transform: scale(1.1);
       box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
     }
+
+    /* Hide back button on game pages */
+    #gameScreen:not(.hidden)~.back-btn,
+    #gameOverScreen:not(.hidden)~.back-btn {
+      display: none !important;
+    }
   </style>
 </head>
 
