--- a/public/conquest-host.html
+++ b/public/conquest-host.html
@@ -232,223 +232,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/conquest-game.js"></script>
-    <script>
-        const socket = io();
-
-        let roomCode = null;
-        let grid = null;
-        let renderer = null;
-        let timerInterval = null;
-
-        function createRoom() {
-            socket.emit('createConquestRoom');
-        }
-
-        socket.on('conquestRoomCreated', (data) => {
-            roomCode = data.roomCode;
-            document.getElementById('roomCode').textContent = roomCode;
-            document.getElementById('waitingScreen').classList.add('hidden');
-            document.getElementById('mainDisplay').style.display = 'flex';
-            document.getElementById('sidebar').style.display = 'flex';
-
-            // Initialize grid
-            grid = new ConquestGrid(10);
-            grid.initializeSpecialCells(8);
-            const container = document.getElementById('gridContainer');
-            renderer = new ConquestRenderer(container, grid, {
-                large: true,
-                clickable: false
-            });
-        });
-
-        socket.on('conquestPlayerListUpdate', (data) => {
-            document.getElementById('playerCount').textContent = data.players.length;
-        });
-
-        function startGame() {
-            socket.emit('startConquestGame', { roomCode });
-            document.getElementById('startBtn').style.display = 'none';
-        }
-
-        socket.on('conquestGameStarted', () => {
-            document.getElementById('gameStatus').textContent = 'Game in progress...';
-        });
-
-        socket.on('conquestRoundStart', (data) => {
-            const { roundNumber, maxRounds, mapState, duration } = data;
-
-            document.getElementById('roundDisplay').textContent = `Round ${roundNumber}/${maxRounds}`;
-
-            // Reset next round button
-            const nextBtn = document.getElementById('nextBtn');
-            nextBtn.style.display = 'none';
-            nextBtn.disabled = false;
-            nextBtn.textContent = 'Vòng Tiếp Theo';
-            nextBtn.style.opacity = '1';
-
-            grid.import(mapState);
-            renderer.render();
-
-            // Real-time player cell selections
-            // const playerPendingCells = new Map(); // playerId -> [{x, y}]
-
-            // socket.on('conquestPlayerCellUpdate', ({ playerId, playerNickname, x, y, action }) => {
-            //     if (!playerPendingCells.has(playerId)) {
-            //         playerPendingCells.set(playerId, []);
-            //     }
-
-            //     const cells = playerPendingCells.get(playerId);
-
-            //     if (action === 'add') {
-            //         cells.push({ x, y });
-            //     } else if (action === 'remove') {
-            //         const index = cells.findIndex(c => c.x === x && c.y === y);
-            //         if (index >= 0) cells.splice(index, 1);
-            //     }
-
-            //     // Update cell display
-            //     updatePendingCellDisplay();
-            // });
-
-            // function updatePendingCellDisplay() {
-            //     // Clear all pending indicators first
-            //     document.querySelectorAll('.pending-indicator').forEach(el => el.remove());
-
-            //     // Add indicators for each player's pending cells
-            //     playerPendingCells.forEach((cells, playerId) => {
-            //         cells.forEach(({ x, y }) => {
-            //             const cell = document.querySelector(`[data-x="${x}"][data-y="${y}"]`);
-            //             if (cell && !cell.classList.contains('owned')) {
-            //                 // Add small indicator
-            //                 const indicator = document.createElement('div');
-            //                 indicator.className = 'pending-indicator';
-            //                 indicator.textContent = '👤';
-            //                 indicator.style.cssText = `
-            //                     position: absolute; 
-            //                     top: 2px; 
-            //                     left: 2px; 
-            //                     font-size: 12px;
-            //                     pointer-events: none;
-            //                 `;
-            //                 cell.style.position = 'relative';
-            //                 cell.appendChild(indicator);
-            //             }
-            //         });
-            //     });
-            // }
-
-            // Real-time indicators removed - don't spoil player strategy!
-            // socket.on('conquestPlayerCellUpdate', ...) - DISABLED
-
-            socket.on('conquestMapUpdate', (data) => {
-                const { grid: gridData, leaderboard, conflictsThisRound } = data;
-
-                // Update grid data
-                grid.grid = gridData;
-
-                // Update only changed cells instead of full re-render
-                for (let x = 0; x < grid.size; x++) {
-                    for (let y = 0; y < grid.size; y++) {
-                        renderer.updateCell(x, y);
-                    }
-                }
-
-                // Show conflicts
-                conflictsThisRound.forEach(({ x, y }) => {
-                    renderer.showConflict(x, y);
-                });
-
-                // Update leaderboard
-                updateLeaderboard(leaderboard);
-
-                // Count total claimed cells
-                let total = 0;
-                for (let x = 0; x < grid.size; x++) {
-                    for (let y = 0; y < grid.size; y++) {
-                        if (grid.grid[x][y] !== null) total++;
-                    }
-                }
-                document.getElementById('totalCells').textContent = total;
-            });
-
-            socket.on('conquestRoundEnd', () => {
-                if (timerInterval) {
-                    clearInterval(timerInterval);
-                }
-                document.getElementById('nextBtn').style.display = 'inline-block';
-            });
-
-            socket.on('conquestGameOver', (data) => {
-                document.getElementById('gameStatus').textContent = '🎉 Trò Chơi Kết Thúc!';
-                document.getElementById('nextBtn').style.display = 'none';
-                updateLeaderboard(data.finalLeaderboard);
-                // Host controls when to leave - no auto-redirect
-            });
-
-            // Start round timer
-            startTimer(duration / 1000);
-        });
-
-        // Functions in global scope
-        function nextRound() {
-            // Disable button immediately for visual feedback
-            const btn = document.getElementById('nextBtn');
-            btn.disabled = true;
-            btn.textContent = 'Đang xử lý...';
-            btn.style.opacity = '0.5';
-
-            socket.emit('conquestNextRound', { roomCode });
-        }
-
-        function startTimer(seconds) {
-            let remaining = seconds;
-            const timerEl = document.getElementById('timer');
-
-            if (timerInterval) clearInterval(timerInterval);
-
-            timerInterval = setInterval(() => {
-                remaining--;
-                timerEl.textContent = remaining;
-
-                if (remaining <= 3) {
-                    timerEl.classList.add('warning');
-                } else {
-                    timerEl.classList.remove('warning');
-                }
-
-                if (remaining <= 0) {
-                    clearInterval(timerInterval);
-                }
-            }, 1000);
-        }
-
-        function updateLeaderboard(leaderboard) {
-            const container = document.getElementById('leaderboardList');
-            container.innerHTML = '';
-
-            leaderboard.slice(0, 10).forEach((player, index) => {
-                const item = document.createElement('div');
-                item.className = `leaderboard-item rank-${index + 1}`;
-
-                const rankBadge = document.createElement('div');
-                rankBadge.className = 'rank-badge';
-                rankBadge.textContent = index === 0 ? '🥇' : index === 1 ? '🥈' : index === 2 ? '🥉' : `#${index + 1}`;
-
-                const name = document.createElement('div');
-                name.className = 'player-name';
-                name.textContent = player.nickname;
-
-                const score = document.createElement('div');
-                score.className = 'player-score';
-                score.textContent = player.territory || 0;
-
-                item.appendChild(rankBadge);
-                item.appendChild(name);
-                item.appendChild(score);
-                container.appendChild(item);
-            });
-        }
-    </script>
+    <script src="/js/conquest-host.js"></script>
 </body>
 
 </html>
