Fix: Hide Next Round button initially

--- a/public/host-reflex.html
+++ b/public/host-reflex.html
@@ -76,7 +76,7 @@
           <span class="timer-icon">⏱️</span>
           <span class="timer-value" id="timerValue">--</span>s
         </div>
-        <button id="nextRoundBtn" class="btn btn-secondary">Vòng Tiếp Theo →</button>
+        <button id="nextRoundBtn" class="btn btn-secondary" style="display: none;">Vòng Tiếp Theo →</button>
       </div>
     </div>
 
